# RTLens

./: .gitignore  DEPENDENCIES.md  LICENSE  README.md  pyproject.toml  requirements.txt
RTL/verification/deep_case/: vlist
RTL/verification/deep_case/src/: vm_deep_leaf.sv  (+3 more)
RTL/verification/mid_case/: vlist
RTL/verification/min_case/: vlist
rtlens/docs/: HANDOVER_CODEX_JA.md  install.md  macos-fix-summary.md  macos-pyside6-qpa-debug.md  macos-slang-fmt-abi-debug.md  usage.md
rtlens/rtlens/: __main__.py  app.py  app_cli.py  callable_resolver.py  connectivity.py  debug_rtl.py  editor_cmd.py  editor_config.py  model.py  netlistsvg_svg.py  netlistsvg_view.py  qt_app.py  qt_text_utils.py  rtl_debug.py  rtl_dot.py  rtl_elk.py  rtl_elk_render.py  rtl_extract.py  rtl_graphviz.py  rtl_ir.py  rtl_ir_builder.py  rtl_structure.py  slang_backend.py  sv_parser.py  wave.py  wave_bridge.py  yosys_runner.py
rtlens/tests/: conftest.py  test_app_cli.py  test_callable_resolver.py  test_connectivity.py  test_editor_cmd.py  test_editor_config.py  test_netlistsvg_svg.py  test_qt_text_utils.py  test_rtl_extract.py  test_slang_integration.py  test_sv_parser.py  test_sv_parser_edge.py  test_windows_arg_normalization.py  test_yosys_runner.py
rtlens/tests/fixtures/: callable.sv  counter.sv  fsm.sv  generate_for.sv  hierarchy.sv  ifdef_guard.sv  multiport.sv  pipeline.sv  simple_assign.sv
rtlens/tools/: gui_regression_cases.py  macos_qt_plugin_fix.py  regression_schematic_verification.py  regression_wave.py  run_usage_samples.py  setup_slang_prefix.py  slang_dump.cpp  verify_install.py
(+9 files in other folders)
