[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtlens"
version = "0.1.0"
description = "SystemVerilog source, hierarchy, connectivity, and waveform viewer"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "RTLens contributors" },
]
dependencies = [
  "PySide6>=6.5",
]

[project.scripts]
rtlens = "rtlens.app_cli:main"
rtlens-qt = "rtlens.qt_app:main"

[tool.setuptools]
package-dir = { "" = "rtlens" }

[tool.setuptools.packages.find]
where = ["rtlens"]
include = ["rtlens*"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]

[tool.pytest.ini_options]
testpaths = ["rtlens/tests"]
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "requires_slang: marks tests that need the slang_dump binary",
    "requires_gui: marks tests that need a display / Qt runtime",
]
